Make Mac OS X debug trap impl use raise(SIGTRAP) instead of Mac OS X debugging function so we're only required to set the XPCOM debug env variable and not also the Mac OS X debug break variable. Also make GNUC/x86 test more robust, include '__i386__' in the test because not all platforms define '__i386' (Mac OS X is one of those, though it doesn't really matter here since we do a separate test for Mac OS X). b=339987 r=mento sr=dougt